# cybertracker-backend

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  config.py  deps.py  main.py  openapi.py
app/ai/: attendance.py  features.py  model.py
app/core/: audit_service.py  security.py
app/db/: seed.py  session.py
app/models/: __init__.py  auth.py  discipline.py  employee.py  enums.py  participant.py  payment.py  system.py  tournament.py
app/repositories/: __init__.py  auth.py  base.py  discipline.py  employee.py  participant.py  payment.py  system.py  tournament.py
app/routers/: __init__.py  auth.py  discipline.py  employee.py  identity.py  participant.py  payment.py  system.py  tournament.py
app/schemas/: __init__.py  auth.py  common.py  discipline.py  employee.py  error.py  match.py  participant.py  payment.py  prediction.py  qr.py  registration.py  role.py  tournament.py  user.py
data/training/: attendance_synthetic.csv  attendance_training.csv
models/: attendance_model.joblib  xgboost_attendance.ubj
notebooks/: generator.ipynb  statistics.ipynb  train.ipynb
scripts/: train_attendance_model.py
