[project]
name = "cybertracker"
version = "0.1.0"
description = "CyberTracker REST API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "scalar-fastapi",
    "uvicorn[standard]",
    "yarl",
    "python-multipart",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "bcrypt",
    "python-jose[cryptography]",
    "slowapi",
    "scikit-learn",
    "xgboost",
    "joblib",
    "numpy>=2.4.4",
    "pandas",
    "ipykernel>=7.2.0",
    "optuna>=4.8.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
root = ["./app"]
python-version = "3.14"

[tool.ty.src]
include = ["app"]
